# ci-templates

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamlfmt.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  check-var-exists.sh  custom_pre_commit.py  dprint.json  format_md_with_dprint.py  generate-doc.py  generate-doc.sh  git-setup.sh  test.py
.github/: actionlint.yaml  changelog-config.json  dependencies.py  generate-doc.py
.github/workflows/: README.md  _add-issue-ci.yaml  _format.yaml  _generate_doc.yaml  _lint.yaml  _pre-commit-check.yaml  _release.yaml  _test-python-actions.yaml  _test-python-setup-poetry.yaml  bump-version-release-stoyan.yaml  bump-version-release.yaml  bumpversion-release.yaml  checkout_repo.yaml  docker-build-and-publish-gcr.yaml  docker-build-and-publish.yaml  format.yaml  generate-changelog.yaml  helm-gke-deploy.yaml  helm-gke-destroy.yaml  helm-lint.yaml  helm-multi-release.yaml  helm-release.yaml  java-gradle-artifact.yaml  java-gradle-base.yaml  java-gradle-docker.yaml  java-gradle-library.yaml  java-gradle-plugin.yaml  java-gradle-release.yaml  kustomize-gke-deploy.yaml  kustomize-gke-destroy.yaml  (+14 more)
actions/gcp-gsm-parse-secrets/: Dockerfile  README.md  action.yaml  main.py  pyproject.toml  tests.py
bump-version/: README.md  action.yaml  bumpversion.sh
git-setup/: action.yaml
helm-lint/: README.md  action.yaml
helm-release/: README.md  action.yaml
helm-setup/: action.yaml
release-python-poetry/: README.md  action.yaml
workflows/: README.md  python-poetry-release.yaml
(+316 files in other folders)
